# residualrmn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-quality.yml
data/MNIST/: permutation.json
datasets/MNIST/: permutation.json
experiments/: README.md  eigenspectrum.ipynb  residualrmn_configs.sh  test_residualrmn.py
src/: __init__.py
src/data/: __init__.py  data_utils.py
src/networks/: init_utils.py  reservoir.py  residualrmn.py
src/training/: solver.py
